<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<TextView android:background="#A9A1A28F" android:hint="@string/scholastic_swordtail_circumcise_spring" android:id="@+id/portageDeemphasizeView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/encode_utopian_rosenzweig_gaiety" android:textColor="@color/geochronology_viceroy" android:textSize="@dimen/bridge_asylum_textsize" app:layout_constraintBottom_toTopOf="@id/farrellQuahogView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<EditText android:background="@color/strife_citizen" android:hint="@string/scrapping_data_oriole" android:id="@+id/farrellQuahogView" android:inputType="text" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/pessimism_halibut_circumstantial" android:textColor="#C3419D07" app:layout_constraintBottom_toTopOf="@id/thyroglobulinView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/portageDeemphasizeView"/>
<CheckBox android:background="#4922C3" android:hint="@string/knapp_annex_tellurium_atonal" android:id="@+id/thyroglobulinView" android:layout_height="wrap_content" android:layout_width="@dimen/inclose_fillet" android:paddingEnd="@dimen/reagan_buyer_height" android:paddingStart="@dimen/attache_matting_height" android:paddingTop="@dimen/inventory_angelfish" android:text="@string/sect_sloane_dual_populism" android:textColor="@color/salutary_tinker_hermitian" android:textSize="18sp" app:layout_constraintBottom_toTopOf="@id/friezePurposeView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/farrellQuahogView"/>
<CheckBox android:background="@color/upsetting_ulcer" android:hint="@string/vernal_mimi_comptroller" android:id="@+id/friezePurposeView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/chairmen_bruce_slump" android:textColor="@color/inarticulate_neptune_quixotic" android:textSize="20sp" app:layout_constraintBottom_toTopOf="@id/hardyLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/thyroglobulinView"/>
<LinearLayout android:gravity="bottom|center_vertical" android:id="@+id/hardyLayout" android:layout_height="wrap_content" android:layout_width="@dimen/twin_eavesdropped_margin" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/fingerView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/friezePurposeView">
<CheckBox android:hint="@string/poughkeepsie_pharmacist_wale" android:id="@+id/polarogramView" android:layout_height="match_parent" android:layout_margin="@dimen/inability_capricorn_width" android:layout_width="wrap_content" android:text="@string/rotc_neap_avesta" android:textColor="@color/sawtooth_sparring"/>
<AutoCompleteTextView android:background="@color/seaport_stave" android:hint="@string/someday_birdseed_dissension_batch" android:id="@+id/irwinInductView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/frenchman_constitution_bullrush" android:textColor="@color/wrigley_slink_tram"/>
<CheckBox android:background="@color/agnes_plate_belshazzar" android:hint="@string/curran_reimbursable_bouquet" android:id="@+id/lufthansaView" android:layout_height="match_parent" android:layout_width="wrap_content" android:padding="12dp" android:text="@string/cauchy_deem_atavistic" android:textSize="@dimen/clam_sorb_textsize"/>
<CheckBox android:background="@color/faience_extemporaneous_pickett" android:hint="@string/sewerage_cuddle_dilapidate" android:id="@+id/summateView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/dennis_siesta_plasmon_inconvenient" android:textColor="@color/sustenance_vitreous_hickey" android:textSize="@dimen/commerce_cordial_textsize"/>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/partnerLayout" android:layout_height="wrap_content" android:layout_width="wrap_content">
<Button android:background="@color/frail_bindery_circumvention" android:hint="@string/holmium_joanne_pluton" android:id="@+id/ladleVitalView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/swami_tachinid_amherst" android:textColor="@color/bipedal_puppy_kneecap" android:textSize="@dimen/supposition_bacchus_textsize" app:layout_constraintBottom_toTopOf="@id/nuanceView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<CheckBox android:hint="@string/innards_mcgovern_transitive" android:id="@+id/nuanceView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/twilight_paradox_kettle" android:textColor="@color/apple_malfeasant_kiloword" app:layout_constraintBottom_toTopOf="@id/salutoryGropeView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ladleVitalView"/>
<TextView android:background="@color/replica_dung" android:hint="@string/formal_solon_arrangeable_sniff" android:id="@+id/salutoryGropeView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/butchery_ubiquitous_prescriptive_plushy" android:textColor="@color/dravidian_appliance_annette" android:textSize="@dimen/stanford_histochemistry_textsize" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/nuanceView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
<TextView android:background="@color/ultimatum_pencilled" android:hint="@string/macon_glue_scary" android:id="@+id/courteousView" android:layout_height="match_parent" android:layout_marginBottom="@dimen/inconsistent_spencer_width" android:layout_marginEnd="@dimen/molybdenum_headsman_size" android:layout_marginStart="34dp" android:layout_width="wrap_content" android:text="@string/accouter_trihedral_actuarial_skeet"/>
<EditText android:background="@color/kaleidescope_badge" android:hint="@string/mundane_mohawk_compensate_swarthy" android:id="@+id/napeGrosvenorView" android:inputType="textVisiblePassword" android:layout_height="match_parent" android:layout_margin="@dimen/despicable_venomous_padding" android:layout_width="wrap_content" android:text="@string/iniquitous_shapiro_signal" android:textColor="@color/siberia_lichen_deterrent"/>
<LinearLayout android:gravity="bottom|center_vertical" android:id="@+id/wageTizzyLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal">
<EditText android:hint="@string/societal_rollins_musk" android:id="@+id/ashameNematocystView" android:inputType="text" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/vision_impetus_pythagoras_ultrafast" android:textColor="@color/eyesight_logging_maynard"/>
<TextView android:background="@color/compagnie_separate" android:hint="@string/gazpacho_requisite_cretin" android:id="@+id/clergymenView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/alkaline_info_padding" android:layout_marginTop="@dimen/walt_spell_height" android:layout_width="wrap_content" android:text="@string/churchgo_dixieland_zeroth" android:textColor="@color/notary_quantico_windmill"/>
<TextView android:background="#2BFD67D9" android:hint="@string/peasanthood_imposture_dovetail_drastic" android:id="@+id/exfoliateView" android:layout_height="match_parent" android:layout_width="wrap_content" android:paddingBottom="@dimen/envious_fade_width" android:paddingTop="@dimen/lapel_antipode_height" android:text="@string/chickadee_caress_beckman_involutory" android:textColor="@color/adequate_donovan_gyrate"/>
<TextView android:background="@color/cuny_rosette" android:hint="@string/vacuolate_superior_handbag" android:id="@+id/henceView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/butler_propionate_helpmate_valois" android:textColor="@color/sandburg_profundity_anglophobia" android:textSize="@dimen/byproduct_season_textsize"/>
</LinearLayout>
<CheckedTextView android:background="@color/sandburg_profundity_anglophobia" android:hint="@string/soya_wallet_hypothermia_eelgrass" android:id="@+id/foundryRussoView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/brennan_herman_aesop_chamfer" android:textColor="@color/cryostat_offprint" android:textSize="@dimen/gabbing_akin_textsize"/>
<AutoCompleteTextView android:background="@color/gaston_calculable_grimy" android:hint="@string/palaeontology_spawn_osteology_walkway" android:id="@+id/sapiensPlightView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/glibly_vagary_dominic_midband"/>
<EditText android:background="@color/tuscany_decapitate" android:hint="@string/among_veil_lessee" android:id="@+id/tornMetaboliteView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/buenos_fields_crystal"/>
<EditText android:hint="@string/muggy_vomit_amide_crisis" android:id="@+id/cuttlefishCotoneasterView" android:inputType="textCapCharacters" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/shrive_lacustrine_trigonometric" android:textColor="@color/gloat_profane_coldhearted"/>
</LinearLayout>
<TextView android:background="#D8D6FC" android:hint="@string/midsection_rapping_tokamak_entertain" android:id="@+id/fingerView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/maurine_growl_self_shingle" app:layout_constraintBottom_toTopOf="@id/sacredMechanistView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/hardyLayout"/>
<TextView android:background="@color/wristwatch_maria_glomerular" android:hint="@string/vile_piracy_aminobenzoic_neutrino" android:id="@+id/sacredMechanistView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/pinsky_octave_sunburnt_madam" android:textColor="#52E16E" android:textSize="18sp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/fingerView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
