<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<LinearLayout android:gravity="center" android:id="@+id/constituteLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/freedmanFootwearView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
<CheckedTextView android:background="@color/chevrolet_actinic" android:hint="@string/flatware_waite_abigail" android:id="@+id/neutrinoDecemberView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/whimsic_suppressible_arianism" android:textColor="@color/magnanimous_deduct_arch"/>
<CheckedTextView android:background="@color/bone_honshu_mozzarella" android:hint="@string/congo_grady_boatmen_harbinger" android:id="@+id/polarView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/donning_terminology_perceptive" android:textColor="@color/maxima_surgery_nordic" android:textSize="@dimen/purslane_bathurst_textsize"/>
<TextView android:background="@color/laureate_contempt" android:hint="@string/turnabout_truism_falcon_excrement" android:id="@+id/grayKeenanView" android:layout_height="wrap_content" android:layout_margin="@dimen/racial_testes_width" android:layout_width="wrap_content" android:text="@string/carborundum_trenton_polymerase_anna"/>
<EditText android:hint="@string/vile_piracy_aminobenzoic_neutrino" android:id="@+id/skinflintView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/emerald_sophomore_tung_needlepoint" android:textColor="@color/corps_polopony"/>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/bobcatLayout" android:layout_height="match_parent" android:layout_width="wrap_content">
<EditText android:background="@color/upsetting_ulcer" android:hint="@string/superbly_offbeat_amongst" android:id="@+id/arrangeJockstrapView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingBottom="@dimen/midweek_tablecloth_size" android:paddingEnd="46dp" android:paddingStart="@dimen/preempt_wiseacre_padding" android:paddingTop="@dimen/airway_motor_width" android:text="@string/avon_scientific_embryology_essence" android:textColor="@color/wrigley_slink_tram" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
<AutoCompleteTextView android:background="@color/tangerine_omitting" android:hint="@string/swastika_fiddle_pinch_bulkhead" android:id="@+id/tickView" android:layout_height="wrap_content" android:layout_margin="@dimen/inconsistent_spencer_width" android:layout_width="wrap_content" android:text="@string/quarterback_waldron_seventy_peon" android:textColor="#5164FD"/>
<LinearLayout android:gravity="end" android:id="@+id/hierarchyProteolysisLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical">
<AutoCompleteTextView android:background="@color/firmware_winkle_invalidate" android:hint="@string/gilt_burr_veneer" android:id="@+id/mnemonicView" android:layout_height="wrap_content" android:layout_margin="@dimen/inasmuch_kiosk_height" android:layout_width="wrap_content" android:text="@string/geometrician_medea_scholar" android:textColor="@color/bulk_motorcade_perpendicular"/>
<EditText android:background="@color/starlight_eldest_penurious" android:hint="@string/flag_hubbell_atom" android:id="@+id/nuttingJaneView" android:inputType="text" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/transformation_lynchburg_tilth" android:textColor="@color/delphinus_happy" android:textSize="@dimen/helene_sublimate_textsize"/>
<TextView android:background="#A9713A" android:hint="@string/fluke_offstage_parallel" android:id="@+id/borateView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/bile_crossroad_twirly" android:textSize="@dimen/cobra_decisive_textsize"/>
<Button android:background="@color/firmware_winkle_invalidate" android:hint="@string/democratic_stimulate_junk_blackout" android:id="@+id/gustafsonVetoView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/month_pete_confute_annum" android:textColor="@color/title_dominant"/>
<CheckedTextView android:hint="@string/officious_anaglyph_boor" android:id="@+id/pluckyView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/knowlton_brighton_krebs" android:textColor="#0E01F6" android:textSize="@dimen/douglass_pediment_textsize"/>
<Button android:background="#1A37B0" android:hint="@string/congener_acuity_fort_orchard" android:id="@+id/preferentialView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/neglect_snook_plight" android:textColor="#5C49B0" android:textSize="@dimen/haploidy_chester_textsize"/>
<CheckBox android:background="@color/journalese_conjunct" android:hint="@string/societal_rollins_musk" android:id="@+id/fabulousView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/stunk_libelous_urea"/>
<EditText android:background="@color/groom_acrylate" android:hint="@string/widthwise_pliable_dissertation" android:id="@+id/currantTerribleView" android:inputType="textMultiLine" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/elijah_seriate_manganese" android:textColor="@color/landhold_horseplay_chickadee"/>
</LinearLayout>
</LinearLayout>
<Button android:background="#43CD91" android:hint="@string/gunman_ebony_thrift_trainload" android:id="@+id/freedmanFootwearView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/possemen_peptide_lathrop" android:textColor="@color/soak_slowdown_pigeon" app:layout_constraintBottom_toTopOf="@id/disparateView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/constituteLayout"/>
<EditText android:background="@color/hiatus_secondhand" android:hint="@string/fragmentation_eightyfold_insurgent_unity" android:id="@+id/disparateView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_marginBottom="38dp" android:layout_marginTop="@dimen/adriatic_keynes_margin" android:layout_width="@dimen/hahn_daze_width" android:text="@string/getting_swollen_physique" android:textColor="@color/girl_cleat_archfool" android:textSize="@dimen/viviparous_virginia_textsize" app:layout_constraintBottom_toTopOf="@id/trisodiumView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/freedmanFootwearView"/>
<EditText android:background="@color/hominid_baboon" android:hint="@string/canticle_hothouse_imagery" android:id="@+id/trisodiumView" android:inputType="textCapWords" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/heartbreak_pleat_testamentary" android:textColor="@color/foothold_excision" app:layout_constraintBottom_toTopOf="@id/veldtView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/disparateView"/>
<EditText android:background="@color/sewn_loud_prof" android:hint="@string/scrapping_data_oriole" android:id="@+id/veldtView" android:inputType="phone" android:layout_height="wrap_content" android:layout_margin="30dp" android:layout_width="match_parent" android:text="@string/surtout_pictorial_perchlorate" android:textSize="@dimen/cepheus_kigali_textsize" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/trisodiumView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
